# claude-notch

./: .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  index.html  package.json  skills-lock.json  tsconfig.json  vite.config.ts
scripts/: claude-settings.example.json  status.py
scripts/hooks/: claude-permission.py  claude-status.py  codex-permission.py  codex-status.py  cursor-hook.py  hooks.test.ts  notch_ipc.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: integrations.rs  lib.rs  main.rs  permissions.rs
src/components/: integrations-section.tsx  markdown.tsx  picker-sheet.tsx  session-row.tsx  settings-view.tsx  sheet-panel.tsx  stats-view.tsx  tool-detail-view.tsx  transcript-preview.tsx
src/components/ui/: button.tsx  scroll-area.tsx  textarea.tsx
src/hooks/: use-app-stats.ts  use-permissions.ts  use-plan-usage.ts  use-sessions.ts  use-settings.ts  use-theme.ts  use-transcript.ts
src/lib/: clawd.test.ts  clawd.ts  diff.test.ts  diff.ts  integrations.test.ts  integrations.ts  permissions.test.ts  permissions.ts  plan-usage.test.ts  plan-usage.ts  providers.test.ts  providers.ts  rules.test.ts  rules.ts  sessions.test.ts  sessions.ts  shortcut.test.ts  shortcut.ts  theme.test.ts  theme.ts  tool-detail.test.ts  tool-detail.ts  transcript.test.ts  transcript.ts  usage.test.ts  usage.ts
